fixed blog error

--- a/blog.html
+++ b/blog.html
@@ -66,7 +66,7 @@
                             <a href="/checkpoint3/cases.html">Cases</a>
                         </li>
                         <li>
-                            <a href="/checkpoint3/blog.html">Blog</a>3/blog.html">Blog</a>3/blog.html">Blog</a>
+                            <a href="/checkpoint3/blog.html">Blog</a>
                         </li>
                         <li>
                             <a href="/checkpoint3/contact.html">Contact</a>
